Fixed scrollbar over navlinks

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -119,10 +119,6 @@
     padding: 0px 10px 0px 10px;
 }
 
-
-
-
-
 .navbar-sep{
     height: 5px;
     position: absolute;
@@ -130,7 +126,9 @@
     left: 0px;
 }
 
-
+.scrollFix{
+    margin-right: 20px;
+}
 
 
 .elt{
